--- a/apache2/sites-available/000-default.conf
+++ b/apache2/sites-available/000-default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     WSGIDaemonProcess flask-api processes=1 threads=5 python-path="/usr/local/bin/python3"
-    WSGIScriptAlias / /opt/www/src/app.wsgi
+    WSGIScriptAlias / /opt/www/src/infrastructure/wsgi/app.wsgi
 
     <Directory /opt/www>
         WSGIProcessGroup flask-api
